# iced_fonts

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: publish.yml
src/: bootstrap.rs  lib.rs  nerd.rs  required.rs
